# goesvideo

./: LICENSE  README.md  helpfultips.txt  pyproject.toml  requirements.txt  tox.ini
goesvideo/: __init__.py  addons.py  exceptions.py  goesvideo.py  overlaygx.py  utils.py
goesvideo/addons/: addons.py  overlays.py  sceneeditor.py
goesvideo/demos/: create_video_goes_west_demo.py  scene_edit_demo.py
goesvideo/etc/: abibands.yaml
goesvideo/tests/: __init__.py  test_animating.py  test_annotations.py  test_compositing.py  test_download.py  test_generic_overlays.py  test_overlays.py  test_preview.py  test_scene_editor.py  test_video_editing.py  treegenerator.py
goesvideo/tests/Test Images/: 2023-10-22 14_05_51 UTC.tif  2023-10-22 14_14_51 UTC.tif  2023-10-22 14_25_51 UTC.tif  2023-10-22 14_42_51 UTC.tif  2023-10-22 14_52_00 UTC.tif  2023-10-22 15_00_51 UTC.tif  2024-10-08 17_58_54 UTC.tif  2024-10-08 18_03_54 UTC.tif  2024-10-08 18_13_54 UTC.tif  2024-10-08 18_23_54 UTC.tif  2024-10-08 18_33_54 UTC.tif  2024-10-08 18_43_54 UTC.tif  2024-10-08 18_53_54 UTC.tif  2024-10-08 18_58_54 UTC.tif  metadata.json  timestamps.csv  timestamps_overlay.csv
goesvideo/utils/: editortools.py  gistools.py
tests/: test_animating.py  test_annotations.py  test_compositing.py
tests/Test Images/: metadata.json
tests/Test NC Files/: OR_ABI-L2-CMIPF-M6C01_G16_s20231411110208_e20231411119516_c20231411119596.nc  OR_ABI-L2-CMIPF-M6C02_G16_s20231411110208_e20231411119516_c20231411119590.nc  OR_ABI-L2-CMIPF-M6C03_G16_s20231411110208_e20231411119516_c20231411119596.nc
