[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "goesvideo"
version = "2024.1.0"
authors = [{name="Justin Holland"}]
description = """Package to streamline operations with GOES satellite imagery"""
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3",
    "botocore",
    "colorama",
    "matplotlib",
    "moviepy",
    "numpy",
    "opencv-python",
    "Pillow>=10.1.0",
    "pytz",
    "PyYAML",
    "rasterio",
    "satpy>=0.45.0",
    "tqdm",
    "urllib3"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.package-data]
"goesvideo.etc" = ["*.yaml"]
"goesvideo.tests" = ['Fonts/*', 'Test Images/*', 'Test NC Files/*', 'Test Videos/*']
